# Gamux-Installer

./: CMakeLists.txt  LICENSE  README.md  default.desktop  gcc8-qt5.15-compile.md  gcc8-qt5.15-compile.txt
.github/workflows/: cmake.yml
doc/: compiling  qt5.15-building.md  tar.md
lib/: libglib-2.0.so.0  libgraphite2.so.3  libharfbuzz.so.0
src/: CMakeLists.txt  ChooseTargetPage.cpp  InstallPage.cpp  InstallPage.h  MainWindow.cpp  MainWindow.h  OptionsPage.cpp  OptionsPage.h  Page.cpp  Page.h  ReadMePage.cpp  ReadMePage.h  TarFile.cpp  TarFile.h  Task.cpp  Task.h  main.cpp  utils.cpp  utils.h
src/pages/: ChooseTargetPage.cpp  ChooseTargetPage.h  InstallPage.cpp  InstallPage.h  MainPage.cpp  MainPage.h  OptionsPage.cpp  Page.cpp  ReadMePage.cpp  ReadMePage.h
src/widgets/: GButton.cpp  GButton.h  GHeader.cpp  GHeader.h  GProgressBar.cpp  GProgressBar.h  GTitleBar.cpp  GTitleBar.h  GWidget.cpp  GWidget.h
template/: cn.linuxgame.desktop  config_template.json  setup.sh
tools/: CMakeLists.txt  ldd.py
tools/builder/: CMakeLists.txt  CheckFileDialog.cpp  CheckFileDialog.h  ChooseSourceDialog.cpp  ChooseSourceDialog.h  ChooseSourceDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Task.cpp  Task.h  main.cpp
utils/: Buffer.cpp  Buffer.h  TarFile.cpp  TarFile.h  tar.h  utils.cpp  utils.h
